# app/Models/Partner/Partner.php
@@ -1,0 +1,21 @@
+<?php
+
+namespace App\Models\Partner;
+
+use Illuminate\Database\Eloquent\Concerns\HasUuids;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Partner extends Model
+{
+    use HasFactory, HasUuids;
+
+    protected $fillable = [
+        'user_id',
+        'name',
+        'description',
+        'phone',
+        'address',
+        'deleted_at'
+    ];
+}
